--- a/plugins/org.eclipse.papyrus.umllight.core/resource/style/umllight_style.css
+++ b/plugins/org.eclipse.papyrus.umllight.core/resource/style/umllight_style.css
@@ -36,7 +36,8 @@ Constraint {
 	shadow: false;
 }
 
-AssociationClass, Class, DataType, Enumeration, Package, Interface, PrimitiveType {
+AssociationClass, Class, DataType, Enumeration, Package, Interface, PrimitiveType,
+UseCase {
 	fillColor: white;
 	lineColor: steelblue;
 	nameBackgroundColor: ghostwhite;
@@ -93,4 +94,33 @@ Association > Label:targetRole {
 Association > Label:name,
 Usage > Label {
 	visible: false;
+}
+
+UseCaseDiagram Class > Compartment[kind="usecases"] {
+    visible: true;
+    showTitle: false;
+}
+
+UseCaseDiagram Class {
+	textAlignment: left;
+}
+
+UseCaseDiagram UseCase {
+	fillColor: ghostwhite;
+}
+
+UseCaseDiagram * {
+	elementIcon: false;
+}
+
+UseCaseDiagram Package {
+	elementIcon: true;
+}
+
+Actor {
+	fillColor: white;
+	elementIcon: false;
+	shadow: false;
+	lineColor: steelblue;
+	isFloatingLabelConstrained: true;
 }
