Fix shadow and fill color of shapes representing n-ary associations

--- a/plugins/org.eclipse.papyrus.umllight.core/resource/style/umllight_style.css
+++ b/plugins/org.eclipse.papyrus.umllight.core/resource/style/umllight_style.css
@@ -77,6 +77,12 @@ Property {
 	maskLabel: name type multiplicity;
 }
 
+Association  {
+	fillColor: white;
+	lineColor: steelblue;
+	shadow: false;
+}
+
 Association > Label,
 AssociationClass > Label {
 	elementIcon: false;
